discussion/kv_engine/128645/128645_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39042: Introduce PrometheusStatistics

PrometheusStatistics encapsulates a prometheus-cpp Exposer.

On incoming scrape requests, a PrometheusStatCollector instance will be
used to gather stats, reusing some of the infrastructure used by
CMD_STAT.

TODO: Get interface/port ipv4/6 from ns_server
TODO: Split into two endpoints once upstream changes are approved
TODO: Tie in auth once upstream changes are approved

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-08 08:58:17.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-08 09:00:40.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24448/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24448/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2623/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2623/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2623/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1127/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
